// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`rebaser when C# project file has conflicts matches the snapshot 1`] = `
"<Project>
  <ItemGroup>
    <PackageVersion Include="System.Text.Json" Version="8.0.0-preview.6.23329.7" />
  </ItemGroup>
</Project>
"
`;

exports[`rebaser when Directory.Packages.props has conflicts matches the snapshot 1`] = `
"<Project>
  <ItemGroup>
    <PackageVersion Include="System.Text.Json" Version="8.0.0-preview.6.23329.7" />
  </ItemGroup>
</Project>
"
`;

exports[`rebaser when a line is deleted packages matches the snapshot 1`] = `
"<Project>
  <ItemGroup>
    <PackageVersion Include="System.Text.Json" Version="8.0.0-preview.6.23329.7" />
  </ItemGroup>
</Project>
"
`;

exports[`rebaser when a solution has multiple conflicts SDK matches the snapshot 1`] = `
"{
  "sdk": {
    "version": "8.0.100-preview.6.23330.14"
  }
}
"
`;

exports[`rebaser when a solution has multiple conflicts packages matches the snapshot 1`] = `
"<Project>
  <ItemGroup>
    <!-- A comment added in the patch -->
    <PackageVersion Include="Alexa.NET" Version="1.22.0" />
    <PackageVersion Include="Amazon.Lambda.Core" Version="2.1.0" />
    <PackageVersion Include="Amazon.Lambda.Logging.AspNetCore" Version="3.1.0" />
    <PackageVersion Include="Amazon.Lambda.RuntimeSupport" Version="1.8.8" />
    <PackageVersion Include="Amazon.Lambda.Serialization.Json" Version="2.1.1" />
    <PackageVersion Include="Amazon.Lambda.TestUtilities" Version="2.0.0" />
    <PackageVersion Include="AWSSDK.Lambda" Version="3.7.200.1" />
    <PackageVersion Include="coverlet.msbuild" Version="6.0.0" />
    <PackageVersion Include="GitHubActionsTestLogger" Version="2.3.2" />
    <PackageVersion Include="JustEat.HttpClientInterception" Version="4.0.0" />
    <PackageVersion Include="MartinCostello.Logging.XUnit" Version="0.3.0" />
    <PackageVersion Include="MartinCostello.Testing.AwsLambdaTestServer" Version="0.7.1" />
    <PackageVersion Include="Microsoft.ApplicationInsights" Version="2.21.0" />
    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.6.23329.7" />
    <!-- A comment in the middle of the conflict range -->
    <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.0-preview.6.23329.7" />
    <PackageVersion Include="Microsoft.Extensions.Http.Polly" Version="8.0.0-preview.6.23329.11" />
    <PackageVersion Include="Microsoft.Extensions.Logging" Version="8.0.0-preview.6.23329.7" />
    <PackageVersion Include="Microsoft.ICU.ICU4C.Runtime" Version="72.1.0.1" />
    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.6.3" />
    <PackageVersion Include="Moq" Version="4.18.4" />
    <PackageVersion Include="Polly" Version="7.2.4" />
    <PackageVersion Include="Refit" Version="7.0.0" />
    <PackageVersion Include="ReportGenerator" Version="5.1.23" />
    <PackageVersion Include="Shouldly" Version="4.2.1" />
    <PackageVersion Include="StyleCop.Analyzers" Version="1.2.0-beta.507" />
    <PackageVersion Include="System.Text.Json" Version="8.0.0-preview.6.23329.7" />
    <PackageVersion Include="xunit" Version="2.5.0" />
    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.0" />
    <PackageVersion Include="Xunit.SkippableFact" Version="1.4.13" />
  </ItemGroup>
  <ItemGroup>
    <PackageReference Include="StyleCop.Analyzers" PrivateAssets="All" />
  </ItemGroup>
  <ItemGroup Condition=" '$(IsTestProject)' == 'true' ">
    <PackageReference Include="coverlet.msbuild" PrivateAssets="All" />
    <PackageReference Include="ReportGenerator" PrivateAssets="All" />
  </ItemGroup>
</Project>
"
`;

exports[`rebaser when a the number of lines in the diff is uneven packages matches the snapshot 1`] = `
"<Project>
  <ItemGroup>
    <PackageVersion Include="coverlet.msbuild" Version="6.0.0" />
    <PackageVersion Include="GitHubActionsTestLogger" Version="2.3.2" />
    <PackageVersion Include="MartinCostello.Logging.XUnit" Version="0.3.0" />
    <PackageVersion Include="Microsoft.Extensions.DependencyInjection" Version="8.0.0-preview.6.23329.7" />
    <PackageVersion Include="Microsoft.Extensions.Http" Version="8.0.0-preview.6.23329.7" />
    <PackageVersion Include="Microsoft.Extensions.Http.Polly" Version="8.0.0-preview.6.23329.11" />
    <PackageVersion Include="Microsoft.NET.Test.Sdk" Version="17.7.0" />
    <PackageVersion Include="Moq" Version="4.18.4" />
    <PackageVersion Include="Newtonsoft.Json" Version="13.0.1" Condition=" '$(IsTestProject)' != 'true' " />
    <PackageVersion Include="Newtonsoft.Json" Version="13.0.3" Condition=" '$(IsTestProject)' == 'true' " />
    <PackageVersion Include="Polly" Version="7.2.4" />
    <PackageVersion Include="ReportGenerator" Version="5.1.23" />
    <PackageVersion Include="Shouldly" Version="4.2.1" />
    <PackageVersion Include="StyleCop.Analyzers" Version="1.1.118" />
    <PackageVersion Include="xunit" Version="2.5.0" />
    <PackageVersion Include="xunit.runner.visualstudio" Version="2.5.0" />
  </ItemGroup>
  <ItemGroup>
    <PackageReference Include="StyleCop.Analyzers" PrivateAssets="All" />
  </ItemGroup>
  <ItemGroup Condition=" '$(IsTestProject)' == 'true' ">
    <PackageReference Include="coverlet.msbuild" PrivateAssets="All" />
    <PackageReference Include="ReportGenerator" PrivateAssets="All" />
  </ItemGroup>
</Project>
"
`;

exports[`rebaser when branch is up-to-date matches the snapshot 1`] = `
"{
  "sdk": {
    "version": "8.0.100-preview.6.23330.14"
  }
}
"
`;

exports[`rebaser when global.json has conflicts matches the snapshot 1`] = `
"{
  "sdk": {
    "version": "8.0.100-preview.6.23330.14"
  }
}
"
`;

exports[`rebaser when package.json has conflicts matches the snapshot 1`] = `
"{
  "name": "rebaser",
  "version": "1.0.0",
  "private": true,
  "dependencies": {
    "@microsoft/signalr": "^8.0.0-preview.6.23329.11"
  }
}
"
`;

exports[`rebaser when the conflicts cannot be resolved matches the snapshot 1`] = `
"<Project>
  <ItemGroup>
    <PackageVersion Include="System.Text.Json" Version="8.0.0-preview.6.23329.7" />
  </ItemGroup>
</Project>
"
`;
